ingress/ingress-staging.template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ##instance##-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - ##host##
    secretName: ##instance##-tls-secret-staging
  rules:
  - host: ##host##
    http:
      paths:
      - backend:
          serviceName: ##instance##-nginx
          servicePort: 80
        path: /
